feat: benchmark data serialziation added

--- a/3_A.DeepAR-StockPricesPredictions.ipynb
+++ b/3_A.DeepAR-StockPricesPredictions.ipynb
@@ -131,6 +131,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The folder we will be used to store moving average benchmark model output data in json format\n",
+    "data_dir_json_benchmark = os.path.join(data_dir_json, 'benchmark')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# initializing train/test dataframe lists to iterate on them\n",
     "dfs_train = [df_ibm_train, df_aapl_train, df_amzn_train, df_googl_train]\n",
     "dfs_test = [df_ibm_test, df_aapl_test, df_amzn_test, df_googl_test]\n",
@@ -146,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,15 +298,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "All togheter:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,15 +325,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "All togheter:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,15 +352,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "All togheter:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,12 +363,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
     "for df, m in zip(dfs_valid, mnemonics):\n",
     "    ts2dar_json(df, data_dir_json_valid, m+'.json')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Benchmark data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists(data_dir_json_benchmark): # Make sure that the folder exists\n",
+    "    os.makedirs(data_dir_json_benchmark)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for s, m in zip(ser_valid_ma, mnemonics):\n",
+    "    ts2dar_json(df, data_dir_json_benchmark, m+'.json')"
    ]
   },
   {
@@ -398,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -471,19 +487,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
     "# *unique* train/test prefixes\n",
     "train_prefix   = '{}/{}'.format(data_dir_json, 'train')\n",
     "test_prefix    = '{}/{}'.format(data_dir_json, 'test')\n",
-    "valid_prefix = '{}/{}'.format(data_dir_json, 'valid')"
+    "valid_prefix = '{}/{}'.format(data_dir_json, 'valid')\n",
+    "benchmark_prefix = '{}/{}'.format(data_dir_json, 'benchmark')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,11 +518,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_valid = sagemaker_session.upload_data(path=data_dir_json_valid, bucket=s3_bucket, key_prefix=valid_prefix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "benchmark_valid = sagemaker_session.upload_data(path=data_dir_json_benchmark, bucket=s3_bucket, key_prefix=benchmark_prefix)"
    ]
   },
   {
@@ -517,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,16 +664,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 0"
+    "n = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,8 +690,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SKIP if trainining the model is not needed!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,9 +800,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 288,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------!CPU times: user 428 ms, sys: 27.1 ms, total: 455 ms\n",
+      "Wall time: 11min 32s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "all_data_endpoint = all_stocks_model.deploy(\n",
@@ -1364,7 +1406,7 @@
    "source": [
     "# display predictions\n",
     "for i in range(len(test_predictions)):\n",
-    "    display_quantiles(dsz_valid_predictions[i], valid_gt[i], df_valid_ma[i], 'moving average')"
+    "    display_quantiles(dsz_valid_predictions[i], valid_gt[i], ser_valid_ma[i], 'moving average')"
    ]
   },
   {
@@ -1408,7 +1450,7 @@
     "# display predictions\n",
     "quantiles_img = []\n",
     "for i in range(len(test_predictions)):\n",
-    "    quantiles_img.append(display_quantiles_flask(dsz_valid_predictions[i], valid_gt[i], df_valid_ma[i], 'moving average'))"
+    "    quantiles_img.append(display_quantiles_flask(dsz_valid_predictions[i], valid_gt[i], ser_valid_ma[i], 'moving average'))"
    ]
   },
   {
@@ -1444,7 +1486,7 @@
    "source": [
     "# display predictions\n",
     "for i in range(len(dsz_valid_predictions)):\n",
-    "    display_quantiles(dsz_valid_predictions[i], valid_gt[i], df_valid_ma[i], 'moving average')"
+    "    display_quantiles(dsz_valid_predictions[i], valid_gt[i], ser_valid_ma[i], 'moving average')"
    ]
   },
   {
