--- a/3_A.DeepAR-StockPricesPredictions.ipynb
+++ b/3_A.DeepAR-StockPricesPredictions.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,12 +390,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
     "for s, m in zip(ser_valid_ma, mnemonics):\n",
-    "    ts2dar_json(df, data_dir_json_benchmark, m+'.json')"
+    "    ts2dar_json(s, data_dir_json_benchmark, m+'.json')"
    ]
   },
   {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,16 +664,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 2"
+    "n = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,6 +707,13 @@
     "    \"train\": input_data_train,\n",
     "    \"test\": input_data_test\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SKIP if trainining the model is not needed!"
    ]
   },
   {
@@ -742,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,14 +807,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------------------!CPU times: user 428 ms, sys: 27.1 ms, total: 455 ms\n",
+      "-----------------------!CPU times: user 439 ms, sys: 30.9 ms, total: 470 ms\n",
       "Wall time: 11min 32s\n"
      ]
     }
