chore: cleanup cached files

--- a/3.DeepAR-StockPricesPredictions.ipynb
+++ b/3.DeepAR-StockPricesPredictions.ipynb
@@ -875,14 +875,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-"
+      "-----------------!CPU times: user 341 ms, sys: 17.3 ms, total: 358 ms\n",
+      "Wall time: 8min 32s\n"
      ]
     }
    ],
