chore: fix typo and other minor markup

--- a/2.BenchmarkModel.ipynb
+++ b/2.BenchmarkModel.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "source": [
     "DeepAR is the model of choice for this project.\n",
-    "This model expects input data to be already test-train splitted.\n",
+    "This model expects input data to be already test-train split.\n",
     "A big part of the model design has to be done looking close at data.\n",
     "More specifically, defining these two hyperparameters about the data:\n",
     "* Context length\n",
@@ -50,7 +50,8 @@
    "id": "incredible-control",
    "metadata": {},
    "source": [
-    "This is the length of the time series future predictions in days. It will be conveniently set to 5 days (exactly a week of trading hours) because a shorter interval would be of little significance.\n",
+    "This is the length of the time series future predictions in days. It will be conveniently set to 20 days (exactly 4 weeks of trading hours). Smaller intervals could also be analyzed.\n",
+    "Anyway, any interval shorter than 5 days (one week of trading hours) would be of little significance.\n",
     "A longer interval could be interesting from an application point of view, but it can be challenging in terms of model performances."
    ]
   },
@@ -2818,7 +2819,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set moving average and bolligner bands columns values to same values in last test set record\n",
+    "# set moving average and Bollinger bands columns values to same values in last test set record\n",
     "for mds in win_szs:\n",
     "    ma_column_name = \"%s_ac_ma\" %(str(mds))\n",
     "    df_ibm_valid[ma_column_name] = df_ibm_train[ma_column_name][-1]\n",
@@ -2843,8 +2844,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set moving average and bolligner bands columns values to same values in last test set record\n",
-    "# set moving average and bolligner bands columns values to same values in last test set record\n",
+    "# set moving average and Bollinger bands columns values to same values in last test set record\n",
+    "# set moving average and Bollinger bands columns values to same values in last test set record\n",
     "for mds in win_szs:\n",
     "    ma_column_name = \"%s_ac_ma\" %(str(mds))\n",
     "    df_aapl_valid[ma_column_name] = df_aapl_train[ma_column_name][-1]\n",
@@ -3083,7 +3084,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set moving average and bolligner bands columns values to same values in last test set record\n",
+    "# set moving average and Bollinger bands columns values to same values in last test set record\n",
     "for mds in win_szs:\n",
     "    ma_column_name = \"%s_ac_ma\" %(str(mds))\n",
     "    df_amzn_valid[ma_column_name] = df_amzn_train[ma_column_name][-1]\n",
@@ -3322,7 +3323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set moving average and bolligner bands columns values to same values in last test set record\n",
+    "# set moving average and Bollinger bands columns values to same values in last test set record\n",
     "for mds in win_szs:\n",
     "    ma_column_name = \"%s_ac_ma\" %(str(mds))\n",
     "    df_googl_valid[ma_column_name] = df_googl_train[ma_column_name][-1]\n",
